--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </header>
   </head>
   <body>
-    
+    <div class="container">
+      <form action="">
+        <input type="text" placeholder="Search an Andrewish Word" name="q">
+        <button type="submit"><img src="search.png"></button>
+      </form>
+    </div>
   </body>
 </html>
