--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
+      <form action="" class="searchbar">
         <input type="text" placeholder="Search an Andrewish Word" name="q">
         <button type="submit"><img src="search.png"></button>
       </form>
