--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
   </head>
   <body>
+    <div style="height:100px; background:transparent;"></div>
     <div class="container">
       <form action="" class="searchbar">
         <input type="text" placeholder="Search an Andrewish Word" name="q">
