--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='initial-scale=1, width=device width'>
     <link rel="stylesheet" type="text/css" href="style.css">
     <header>
-      <h2 class="logo">Andrewish</h2>
+      <h2 class="logo" href="/">Andrewish</h2>
       <nav class="navigation">
         <a href="/learn">Learn</a>
         <a href="/dic">Dictionary</a>
